# libwhereami

./: .gitignore  .travis.yml  .travis_target.sh  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  README.md  appveyor.yml
.github/workflows/: main.yml
lib/: CMakeLists.txt  Doxyfile.in
lib/inc/internal/: vm.hpp
lib/inc/internal/detectors/: docker_detector.hpp  hyperv_detector.hpp  kvm_detector.hpp  ldom_detector.hpp  lpar_detector.hpp  lxc_detector.hpp  metadata.hpp  nspawn_detector.hpp  openvz_detector.hpp  result.hpp  virtualbox_detector.hpp  vmware_detector.hpp  wpar_detector.hpp  xen_detector.hpp  zone_detector.hpp
lib/inc/internal/sources/: cgroup_source.hpp  cpuid_source.hpp  dmi_source.hpp  lparstat_source.hpp  smbios_base.hpp  system_profiler_source.hpp  wmi_source.hpp
lib/inc/whereami/: metadata.hpp  result.hpp  whereami.hpp
lib/src/: metadata.cc  result.cc  whereami.cc
lib/src/detectors/: docker_detector.cc  hyperv_detector.cc  kvm_detector.cc  ldom_detector.cc  lpar_detector.cc  lxc_detector.cc  metadata.cc  nspawn_detector.cc  openvz_detector.cc  result.cc  virtualbox_detector.cc  vmware_detector.cc  wpar_detector.cc  xen_detector.cc  zone_detector.cc
lib/src/sources/: cgroup_source.cc  cpuid_source.cc  dmi_source.cc  lparstat_source.cc  smbios_base.cc  system_profiler_source.cc  wmi_source.cc
lib/tests/: CMakeLists.txt  fixtures.cc  fixtures.hpp.in  metadata.cc  result.cc  whereami.cc
lib/tests/detectors/: docker_detector.cc  hyperv_detector.cc  kvm_detector.cc  ldom_detector.cc  lpar_detector.cc  lxc_detector.cc  metadata.cc  nspawn_detector.cc  openvz_detector.cc  result.cc  virtualbox_detector.cc  vmware_detector.cc  wpar_detector.cc  xen_detector.cc  zone_detector.cc
lib/tests/fixtures/: cgroup_fixtures.hpp  cpuid_fixtures.cc  cpuid_fixtures.hpp  dmi_fixtures.cc  dmi_fixtures.hpp  lparstat_fixtures.hpp  system_profiler_fixtures.hpp
lib/tests/fixtures/cgroup/: docker.txt  mixed_v1_v2.txt  nspawn.txt
lib/tests/fixtures/dmidecode/: virtualbox.txt
lib/tests/fixtures/filesystem/dmi_source/virtualbox_root/sys/class/dmi/id/: bios_vendor  board_vendor
lib/tests/fixtures/filesystem/openvz_detector/container_root/proc/1/: status
lib/tests/fixtures/filesystem/openvz_detector/host_root/proc/1/: status
lib/tests/fixtures/output/lparstat/: kvm_power8.txt  lpar.txt  wpar.txt
lib/tests/fixtures/output/system_profiler/: physical.txt  virtualbox.txt  vmware.txt
lib/tests/fixtures/output/virtinfo/: guest.txt  host.txt
lib/tests/fixtures/output/zoneadm/: global.txt  nonglobal.txt
lib/tests/sources/: cgroup_source.cc  cpuid_source.cc  dmi_source.cc  lparstat_source.cc  system_profiler_source.cc
locales/: CMakeLists.txt  cpp-project-template.pot  fr.po  whereami.pot
